Implementacion DOM - 3er entrega

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <header id="header"></header>
+    <main id="main"></main>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
